welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: type YELLOW is not a member of object java.awt.Color
	def faireV(c:Color.YELLOW) { 
                           ^