welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	def faireV(c:Color.YELLOW) { 
		avance();
		baisseBrosse();
		leveBrosse();
		avance()
	}
}
